--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -63,6 +63,7 @@ Dependencies:
     'libraries/plasma-wayland-protocols': '@latest-kf6'
     'libraries/kuserfeedback': '@latest-kf6'
     'libraries/phonon': '@latest-kf6'
+    'libraries/kirigami-addons': '@latest-kf6'
     'graphics/libkexiv2': '@latest-kf6'
     'third-party/appstream': '@latest'
     'third-party/wayland': '@latest'
