--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,13 @@ set_package_properties(KF6Kirigami2 PROPERTIES
     TYPE RUNTIME
 )
 
+find_package(KF6KirigamiAddons2 0.10.0 CONFIG)
+set_package_properties(KF6KirigamiAddons2 PROPERTIES
+    DESCRIPTION "Extra controls for Kirigami applications"
+    PURPOSE "Required at runtime for the User KCM"
+    TYPE RUNTIME
+)
+
 find_package(KF6QuickCharts ${KF6_MIN_VERSION} CONFIG)
 set_package_properties(KF6QuickCharts PROPERTIES
     DESCRIPTION "Used for rendering charts"
