--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -52,6 +52,7 @@ Dependencies:
     'frameworks/kdesu': '@latest-kf6'
     'frameworks/prison': '@latest-kf6'
     'frameworks/kwayland': '@latest-kf6'
+    'frameworks/kstatusnotifieritem': '@latest-kf6'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
     'plasma/libkscreen': '@same'
