--- a/shell/autotests/mockserver/CMakeLists.txt
+++ b/shell/autotests/mockserver/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SharedClientTest_LIB_SRCS
     xdgoutputv1.cpp xdgoutputv1.h
     xdgshell.cpp xdgshell.h
     outputorder.cpp outputorder.h
+    layershell.cpp layershell.h
 )
 
 add_library(SharedClientTest OBJECT)
@@ -28,6 +29,7 @@ qt6_generate_wayland_protocol_server_sources(SharedClientTest FILES
     ${WaylandProtocols_DATADIR}/stable/xdg-shell/xdg-shell.xml
     ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
     ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-output-order-v1.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/wlr-layer-shell-unstable-v1.xml
 )
 
 
