--- a/shell/autotests/CMakeLists.txt
+++ b/shell/autotests/CMakeLists.txt
@@ -47,6 +47,7 @@ MACRO(PLASMASHELL_UNIT_TESTS)
                             KF6::Package
                             KF6::Plasma
                             KF6::PlasmaQuick
+                            KF6::Svg
                             KF6::XmlGui
                             KF6::I18n
                             KF6::GlobalAccel
