--- a/libtaskmanager/CMakeLists.txt
+++ b/libtaskmanager/CMakeLists.txt
@@ -52,7 +52,7 @@ target_link_libraries(taskmanager
         KF6::I18n
         KF6::KIOCore
         KF6::KIOGui
-        KF6::Notifications
+        KF6::JobWidgets
         KF6::WaylandClient
         KF6::WindowSystem
 )
