--- a/runners/shell/CMakeLists.txt
+++ b/runners/shell/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(krunner_shell
     KF6::KIOCore
     KF6::KIOGui
     KF6::I18n
-    KF6::Notifications
+    KF6::JobWidgets
     KF6::Plasma
     KF6::Runner
     KF6::Completion
