--- a/applets/devicenotifier/CMakeLists.txt
+++ b/applets/devicenotifier/CMakeLists.txt
@@ -1,3 +1,3 @@
 plasma_install_package(package org.kde.plasma.devicenotifier)
 
-install(FILES test-predicate-openinwindow.desktop DESTINATION ${KDE_INSTALL_DATADIR}/solid/actions )
+install(FILES openWithFileManager.desktop DESTINATION ${KDE_INSTALL_DATADIR}/solid/actions )
