wallpapers/image: set default image path for Lockscreen KCM
Without a default image path, the default image will not be highlighted
in the Lockscreen KCM.

--- a/wallpapers/image/CMakeLists.txt
+++ b/wallpapers/image/CMakeLists.txt
@@ -20,4 +20,8 @@ install(FILES wallpaper.knsrc wallpaper-mobile.knsrc DESTINATION ${KDE_INSTALL_K
 plasma_install_package(imagepackage org.kde.image wallpapers wallpaper)
 plasma_install_package(slideshowpackage org.kde.slideshow wallpapers wallpaper)
 
+# Generate the default wallpaper path
+configure_file(main.xml.in ${CMAKE_CURRENT_BINARY_DIR}/main.xml @ONLY)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/main.xml DESTINATION ${PLASMA_DATA_INSTALL_DIR}/wallpapers/org.kde.image/contents/config)
 install(DIRECTORY imagepackage/contents/ui DESTINATION ${PLASMA_DATA_INSTALL_DIR}/wallpapers/org.kde.slideshow/contents PATTERN .svn EXCLUDE PATTERN CMakeLists.txt EXCLUDE PATTERN Messages.sh EXCLUDE)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/main.xml DESTINATION ${PLASMA_DATA_INSTALL_DIR}/wallpapers/org.kde.slideshow/contents/config)
