--- a/wallpapers/image/main.xml.in
+++ b/wallpapers/image/main.xml.in
@@ -16,7 +16,7 @@
     </entry>
     <entry name="Color" type="Color">
       <label>Color of the wallpaper</label>
-      <default>#000000</default>
+      <default>#ffffff</default>
     </entry>
     <entry name="Image" type="String">
       <label>Wallpaper image path or wallpaper name</label>
