applets/systemtray: import private QtQuick headers to propagate pressed signal
Fixes "kde.systemtray: Failed to invoke onPressed signal on
CompactRepresentation_QMLTYPE_337(0x2460a30, parent=0x24b0320,
geometry=0,0 32x59) with QQuickMouseEvent(0x204df48)"

--- a/applets/systemtray/CMakeLists.txt
+++ b/applets/systemtray/CMakeLists.txt
@@ -40,6 +40,7 @@ target_link_libraries(systemtraymodel_static
     Qt::Gui
     Qt${QT_VERSION_MAJOR}::GuiPrivate
     Qt::Quick
+    Qt::QuickPrivate
     Qt::DBus
     KF6::XmlGui
     KF6::I18n
