libkmpris: test initial players are fetched
Consolidates 9c5726ab353487580297c83ebe4ae67d14cd8830

--- a/libkmpris/CMakeLists.txt
+++ b/libkmpris/CMakeLists.txt
@@ -45,3 +45,4 @@ install(TARGETS kmpris ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
 
 add_subdirectory(declarative)
 add_subdirectory(kded)
+add_subdirectory(autotests)
