libkmpris: respect `BUILD_TESTING`

--- a/libkmpris/CMakeLists.txt
+++ b/libkmpris/CMakeLists.txt
@@ -45,4 +45,7 @@ install(TARGETS kmpris ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
 
 add_subdirectory(declarative)
 add_subdirectory(kded)
+
+if(BUILD_TESTING)
 add_subdirectory(autotests)
+endif()
