libtaskmanager: enable testRequest on X11 again
This reverts commit 8b46718e4eb6081518a137e664146697dc6a289f.

--- a/libtaskmanager/autotests/CMakeLists.txt
+++ b/libtaskmanager/autotests/CMakeLists.txt
@@ -17,6 +17,7 @@ ecm_add_tests(
 
 # Require QX11Info to set window state
 ecm_add_test(xwindowtasksmodeltest.cpp LINK_LIBRARIES taskmanager Qt::Test Qt::GuiPrivate XCB::XCB KF6::Activities KF6::Service KF6::IconThemes KF6::WindowSystem)
+set_tests_properties(xwindowtasksmodeltest PROPERTIES TIMEOUT 120) # openbox is slow to respond
 
 # Require kwin_wayland, and KWIN_WAYLAND_NO_PERMISSION_CHECKS doesn't work on FreeBSD
 if(NOT CMAKE_SYSTEM_NAME MATCHES "Linux")
