libkmpris: test media keys
CCBUG: 474531

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -84,6 +84,7 @@ RuntimeDependencies:
 - 'on': ['Linux', 'FreeBSD']
   'require':
     'plasma/milou' : '@same'
+    'plasma/kglobalacceld': '@same'
 
 Options:
   require-passing-tests-on: [ '@all' ]
