--- a/libkmpris/autotests/CMakeLists.txt
+++ b/libkmpris/autotests/CMakeLists.txt
@@ -12,3 +12,10 @@ add_test(NAME fetchinitialplayertest
     COMMAND fetchinitialplayertest
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..
 )
+
+find_program(xdotool_PATH xdotool REQUIRED)
+find_program(kglobalacceld_PATH kglobalacceld PATHS ${KDE_INSTALL_FULL_LIBEXECDIR} REQUIRED)
+add_test(NAME mediakeystest
+    COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/mediakeystest.py ${KDE_INSTALL_FULL_LIBEXECDIR}/kglobalacceld
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../appiumtests
+)
