kcms/kfontinst: Open own X connection when not running under X
Ensures that it at least somewhat works on Wayland.

While at it, ports xcb_image back to XImage so we only need an Xlib display.

BUG: 439470

--- a/kcms/kfontinst/lib/CMakeLists.txt
+++ b/kcms/kfontinst/lib/CMakeLists.txt
@@ -12,7 +12,6 @@ target_link_libraries(kfontinst
     PRIVATE
     Qt::Xml
     Qt::Gui
-    XCB::IMAGE
 )
 target_link_libraries(kfontinst PRIVATE Qt::Core5Compat) # for QTextCodec
 
@@ -21,6 +20,6 @@ set_target_properties(kfontinst PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 
 generate_export_header(kfontinst)
 
 add_library(kfontinstui SHARED ${kfontinstui_LIB_SRCS})
-target_link_libraries(kfontinstui KF6::KIOCore KF6::KIOWidgets X11::X11 X11::Xft XCB::IMAGE kfontinst Qt::GuiPrivate)
+target_link_libraries(kfontinstui KF6::KIOCore KF6::KIOWidgets X11::X11 X11::Xft kfontinst Qt::GuiPrivate)
 set_target_properties(kfontinstui PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR} )
 install(TARGETS kfontinst kfontinstui ${KDE_INSTALL_TARGETS_DEFAULT_ARGS} )
