Use keyword signature for target_link_libraries call

--- a/kcms/componentchooser/CMakeLists.txt
+++ b/kcms/componentchooser/CMakeLists.txt
@@ -24,7 +24,7 @@ target_sources(kcm_componentchooser PRIVATE
 kconfig_add_kcfg_files(kcm_componentchooser browser_settings.kcfgc GENERATE_MOC)
 kconfig_add_kcfg_files(kcm_componentchooser terminal_settings.kcfgc GENERATE_MOC)
 
-target_link_libraries(kcm_componentchooser
+target_link_libraries(kcm_componentchooser PRIVATE
     Qt::Core
     KF6::CoreAddons
     KF6::I18n
