Don't try to install waylandtasksmodeltest into the build dir
It already exists in the build dir and since CMAKE_BINARY_DIR holds the
full path it ends up trying to install into some ephemeral dir when
packaging for a distro, e.g.
"/var/tmp/paludis/build/kde-plasma-workspace-scm/work/build".

Instead just pass the proper path of the waylandtaskmodeltest to
waylandtasksmodeltestwrapper.py, which admittedly assumes searching for
a ECM version >= 5.38, but we already depend on a greater version.

--- a/libtaskmanager/autotests/CMakeLists.txt
+++ b/libtaskmanager/autotests/CMakeLists.txt
@@ -24,16 +24,10 @@ if(NOT CMAKE_SYSTEM_NAME MATCHES "Linux")
 endif()
 add_executable(waylandtasksmodeltest waylandtasksmodeltest.cpp)
 target_link_libraries(waylandtasksmodeltest PRIVATE taskmanager Qt::Test Qt::GuiPrivate Qt::WaylandClient Wayland::Client KF6::Service KF6::IconThemes KF6::WindowSystem)
-# Do not really install the test
-if(DEFINED ENV{KDECI_BUILD})
-install(TARGETS waylandtasksmodeltest ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
-else()
-install(TARGETS waylandtasksmodeltest DESTINATION ${CMAKE_BINARY_DIR})
-endif()
 
 add_test(
     NAME waylandtasksmodeltest
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/waylandtasksmodeltestwrapper.py ${CMAKE_BINARY_DIR}/waylandtasksmodeltest
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/waylandtasksmodeltestwrapper.py ${CMAKE_BINARY_DIR}/bin/waylandtasksmodeltest
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 set_tests_properties(waylandtasksmodeltest PROPERTIES TIMEOUT 60)
