--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(kicker)
 add_subdirectory(mediacontroller)
 add_subdirectory(panelspacer)
 
+plasma_install_package(cameraindicator org.kde.plasma.cameraindicator)
 plasma_install_package(clipboard org.kde.plasma.clipboard)
 
 add_subdirectory(notifications)
