applets/batterymonitor: thoroughly test the battery list feature
The code mainly contains:

- UPower mock implementation: To support the upower backend and provide
  custom information for testing.
- Private DBus daemon setup: To mock UPower DBus interface, a private
  DBus session has to be set up so the test can register a system bus.
- Test batteries can be listed in the widget, and their names and states
  are correct.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -81,6 +81,7 @@ RuntimeDependencies:
 - 'on': ['Linux']
   'require':
     'network/kio-extras': '@latest-kf6'
+    'plasma/powerdevil': '@same'
 - 'on': ['Linux', 'FreeBSD']
   'require':
     'plasma/milou' : '@same'
