--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -32,6 +32,20 @@ add_test(
 set_tests_properties(appmenutest PROPERTIES TIMEOUT 120)
 
 add_test(
+    NAME batterymonitortest_withdisplaydevice
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/batterymonitortest.py --failfast ${KDE_INSTALL_FULL_LIBEXECDIR}/org_kde_powerdevil 1
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+set_tests_properties(batterymonitortest_withdisplaydevice PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME batterymonitortest_withoutdisplaydevice
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/batterymonitortest.py --failfast ${KDE_INSTALL_FULL_LIBEXECDIR}/org_kde_powerdevil 0
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+set_tests_properties(batterymonitortest_withoutdisplaydevice PROPERTIES TIMEOUT 120)
+
+add_test(
     NAME calendartest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/calendartest.py
 )
