--- a/plasma-windowed/CMakeLists.txt
+++ b/plasma-windowed/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_definitions("-DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII")
 add_definitions(-DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT)
+add_definitions(-DTRANSLATION_DOMAIN=\"plasmawindowed\")
 
 set(plasmawindowed-app_SRCS
     plasmawindowedcorona.cpp
