--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -20,6 +20,12 @@ endif()
 add_subdirectory(touchinputhelper)
 
 add_test(
+    NAME notificationstest
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/notificationstest.py
+)
+set_tests_properties(notificationstest PROPERTIES TIMEOUT 120)
+
+add_test(
     NAME digitalclocktest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/digitalclocktest.py
 )
