applets/appmenu: add basic appium test
To make sure the widget can be opened

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -26,6 +26,13 @@ add_test(
 set_tests_properties(analogclocktest PROPERTIES TIMEOUT 120)
 
 add_test(
+    NAME appmenutest
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/appmenutest.py
+)
+set_tests_properties(appmenutest PROPERTIES TIMEOUT 120)
+
+
+add_test(
     NAME notificationstest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/notificationstest.py
 )
