--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -45,6 +45,12 @@ add_test(
 set_tests_properties(clipboardtest PROPERTIES TIMEOUT 120)
 
 add_test(
+    NAME devicenotifiertest
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/devicenotifiertest.py
+)
+set_tests_properties(devicenotifiertest PROPERTIES TIMEOUT 120)
+
+add_test(
     NAME notificationstest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/notificationstest.py
 )
