kcms/colors: add basic appium test
To make sure the KCM can be opened

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -114,3 +114,9 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_autostart_test.py
 )
 set_tests_properties(kcm_autostart_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_colors_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_colors_test.py
+)
+set_tests_properties(kcm_colors_test PROPERTIES TIMEOUT 120)
