kcms/cursortheme: add basic appium test
To make sure the KCM can be opene

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -120,3 +120,9 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_colors_test.py
 )
 set_tests_properties(kcm_colors_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_cursortheme_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_cursortheme_test.py
+)
+set_tests_properties(kcm_cursortheme_test PROPERTIES TIMEOUT 120)
