--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -138,3 +138,9 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_feedback_test.py
 )
 set_tests_properties(kcm_feedback_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_fonts_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_fonts_test.py
+)
+set_tests_properties(kcm_fonts_test PROPERTIES TIMEOUT 120)
