--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -150,3 +150,9 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_icons_test.py
 )
 set_tests_properties(kcm_icons_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_fontinst_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_fontinst_test.py
+)
+set_tests_properties(kcm_fontinst_test PROPERTIES TIMEOUT 120)
