--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -168,3 +168,9 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_nightcolor_test.py
 )
 set_tests_properties(kcm_nightcolor_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_notifications_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_notifications_test.py
+)
+set_tests_properties(kcm_notifications_test PROPERTIES TIMEOUT 120)
