kcms/soundtheme: add basic appium test
To make sure the KCM can be opened

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -180,3 +180,10 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_regionandlang_test.py
 )
 set_tests_properties(kcm_regionandlang_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_soundtheme_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_soundtheme_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+set_tests_properties(kcm_soundtheme_test PROPERTIES TIMEOUT 120)
