kcms/style: add basic appium test
To make sure the KCM can be opened

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -187,3 +187,9 @@ add_test(
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 set_tests_properties(kcm_soundtheme_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_style_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_style_test.py
+)
+set_tests_properties(kcm_style_test PROPERTIES TIMEOUT 120)
