--- a/kcms/lookandfeel/autotests/CMakeLists.txt
+++ b/kcms/lookandfeel/autotests/CMakeLists.txt
@@ -8,3 +8,9 @@ target_link_libraries(kcmTest kcm_lookandfeel_objects Qt::Test)
 add_test(NAME lookandfeel-kcmTest COMMAND kcmTest)
 ecm_mark_as_test(kcmTest)
 
+add_executable(lnfmanagertest managertest.cpp)
+target_link_libraries(lnfmanagertest kcm_lookandfeel_objects Qt::Test)
+
+add_test(NAME lookandfeel-lnfmanagertest COMMAND lnfmanagertest)
+ecm_mark_as_test(lnfmanagertest)
+
