kcms/users: add basic appium test
To make sure the KCM can be opened

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -193,3 +193,9 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_style_test.py
 )
 set_tests_properties(kcm_style_test PROPERTIES TIMEOUT 120)
+
+add_test(
+    NAME kcm_users_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_users_test.py
+)
+set_tests_properties(kcm_users_test PROPERTIES TIMEOUT 120)
