Port away from KDesktopFileActions::userDefinedServices
This is planned to be removed as part of https://invent.kde.org/frameworks/kio/-/merge_requests/1386/.
Also, the idea is conflicting with having a KDesktopFileAction class as replacement to KServiceAction.
Since the feature is except for two cases unused, this should not have a real-world impact.

--- a/dataengines/hotplug/CMakeLists.txt
+++ b/dataengines/hotplug/CMakeLists.txt
@@ -19,7 +19,8 @@ target_link_libraries(plasma_engine_hotplug
     KF6::Solid
     KF6::Service
     KF6::KIOCore
-    KF6::KIOWidgets      # KDesktopFileActions
+    KF6::KIOGui # KIO::CommandLauncherJob
+    KF6::JobWidgets # KNotificationJobUiDelegate
     KF6::Notifications
     KF6::I18n
 )
