--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -210,6 +210,6 @@ set_tests_properties(kcm_style_test PROPERTIES TIMEOUT 120)
 
 add_test(
     NAME kcm_users_test
-    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_users_test.py
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_users_test.py --failfast
 )
 set_tests_properties(kcm_users_test PROPERTIES TIMEOUT 120)
